Server software update
Filesystem updated and recompiled with the appropriate fpga bitstream to allow a correct working of the microzed board.

--- a/mzsmd/project-spec/configs/plnxtool.conf
+++ b/mzsmd/project-spec/configs/plnxtool.conf
@@ -77,7 +77,7 @@ NAND_FIT_IMAGE_OFFSET:${MACHINE} = "0x1080000"
 NAND_FIT_IMAGE_SIZE:${MACHINE} = "0x6400000"
 FIT_IMAGE:${MACHINE} = "image.ub"
 FIT_IMAGE_OFFSET:${MACHINE} = "0x10000000"
-PRE_BOOTENV:${MACHINE} = ""
+PRE_BOOTENV:${MACHINE} = "boot.scr"
 
 INITRAMFS_IMAGE = "petalinux-image-minimal"
 IMAGE_FSTYPES:zynq = "cpio cpio.gz cpio.gz.u-boot ext4 tar.gz jffs2"
@@ -96,7 +96,7 @@ INHERIT += "plnx-deploy"
 PLNX_DEPLOY_DIR = "${PROOT}/images/linux"
 PACKAGE_DTB_NAME = ""
 PACKAGE_FITIMG_NAME = "image.ub"
-EXTRA_FILESLIST:append = " /home/berta/work/final-project/final-project-repository-bertac64/mzsmd/project-spec/configs/config:config /home/berta/work/final-project/final-project-repository-bertac64/mzsmd/project-spec/hw-description/Tenaci.bit:system.bit"
+EXTRA_FILESLIST:append = " /home/berta/work/final-project/final-project-repository-bertac64/mzsmd/project-spec/configs/config:config /home/berta/work/final-project/final-project-repository-bertac64/mzsmd/project-spec/hw-description/system.bit:system.bit"
 
 #Below variables helps to add bbappend changes when this file included
 WITHIN_PLNX_FLOW = "1"
@@ -107,22 +107,19 @@ INHERIT += "plnx-deploy extrausers"
 INIT_MANAGER_DEFAULT = "sysvinit"
 
 COMMON_FEATURES:pn-petalinux-image-minimal = "\
-		ssh-server-openssh \
+		ssh-server-dropbear \
 		hwcodecs \
 		"
 IMAGE_LINGUAS:zynq = " "
 
 IMAGE_INSTALL:pn-petalinux-image-minimal = "\
 		kernel-modules \
-		dnf \
 		e2fsprogs-mke2fs \
 		fpga-manager-script \
 		mtd-utils \
 		can-utils \
+		dropbear \
 		nfs-utils \
-		openssh \
-		openssh-ssh \
-		openssh-scp \
 		less \
 		pciutils \
 		vim \
