--- a/mzsmd/images/linux/config
+++ b/mzsmd/images/linux/config
@@ -42,19 +42,19 @@ CONFIG_SUBSYSTEM_MEMORY_IP_NAME="PS7_DDR_0"
 #
 # Serial Settings
 #
-CONFIG_SUBSYSTEM_FSBL_SERIAL_PS7_UART_1_SELECT=y
+CONFIG_SUBSYSTEM_FSBL_SERIAL_PS7_UART_0_SELECT=y
 # CONFIG_SUBSYSTEM_FSBL_SERIAL_MANUAL_SELECT is not set
-CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_SELECT=y
+CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_SELECT=y
 # CONFIG_SUBSYSTEM_SERIAL_MANUAL_SELECT is not set
-# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_BAUDRATE_600 is not set
-# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_BAUDRATE_9600 is not set
-# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_BAUDRATE_28800 is not set
-CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_BAUDRATE_115200=y
-# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_BAUDRATE_230400 is not set
-# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_BAUDRATE_460800 is not set
-# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_1_BAUDRATE_921600 is not set
-CONFIG_SUBSYSTEM_SERIAL_FSBL_IP_NAME="ps7_uart_1"
-CONFIG_SUBSYSTEM_SERIAL_IP_NAME="ps7_uart_1"
+# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_BAUDRATE_600 is not set
+# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_BAUDRATE_9600 is not set
+# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_BAUDRATE_28800 is not set
+CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_BAUDRATE_115200=y
+# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_BAUDRATE_230400 is not set
+# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_BAUDRATE_460800 is not set
+# CONFIG_SUBSYSTEM_SERIAL_PS7_UART_0_BAUDRATE_921600 is not set
+CONFIG_SUBSYSTEM_SERIAL_FSBL_IP_NAME="ps7_uart_0"
+CONFIG_SUBSYSTEM_SERIAL_IP_NAME="ps7_uart_0"
 
 #
 # Ethernet Settings
@@ -99,15 +99,14 @@ CONFIG_SUBSYSTEM_FLASH_IP_NAME="ps7_qspi_0"
 #
 # SD/SDIO Settings
 #
-CONFIG_SUBSYSTEM_PRIMARY_SD_PS7_SD_0_SELECT=y
+CONFIG_SUBSYSTEM_PRIMARY_SD_PS7_SD_1_SELECT=y
 # CONFIG_SUBSYSTEM_PRIMARY_SD_MANUAL_SELECT is not set
-CONFIG_SUBSYSTEM_SD_PS7_SD_0_SELECT=y
+CONFIG_SUBSYSTEM_SD_PS7_SD_1_SELECT=y
 
 #
 # RTC Settings
 #
 CONFIG_SUBSYSTEM_RTC_MANUAL_SELECT=y
-CONFIG_SUBSYSTEM_I2C_PS7_I2C_0_SELECT=y
 CONFIG_SUBSYSTEM_USB_PS7_USB_0_SELECT=y
 # CONFIG_SUBSYSTEM_ARCH_AARCH64 is not set
 CONFIG_SUBSYSTEM_ARCH_ARM=y
@@ -157,7 +156,7 @@ CONFIG_SUBSYSTEM_UBOOT_CONFIG_TARGET="xilinx_zynq_virt_defconfig"
 # u-boot script configuration
 #
 CONFIG_SUBSYSTEM_UBOOT_APPEND_BASEADDR=y
-CONFIG_SUBSYSTEM_UBOOT_PRE_BOOTENV=""
+CONFIG_SUBSYSTEM_UBOOT_PRE_BOOTENV="boot.scr"
 
 #
 # JTAG/DDR image offsets
